# multicamera-calibration

./: .gitignore  README.md  calibration.yaml  camera_rig.yaml  pyproject.toml  run_calibration.py  run_cct_calibration.py  run_combined.py
assets/: target_detections.txt
scripts/: mandeye_to_cslam.py
src/cct_calibration/: __init__.py  run.py  run_combined.py
src/cct_detect/: __init__.py  __main__.py  detector.py
src/multicamera_calibration/: __init__.py  multi_camera_calibration.py
